--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+B<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -68,7 +68,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-left">
-          <form id='input' method='post' action='index'>
+          <form id='input' method='post' action='about'>
           <p>Ticker symbol: <input type='text' name='ticker' placeholder='GOOG' /></p>
           <p>
           <input type="checkbox" name='features' value='close' />Closing price<br>
