--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,9 @@
     <title>Wilkommen, bienvenue, and welcome to Heroku!</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css" type="text/css" />
+    <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js"></script>
+    {{ script | safe }}
   </head>
   <body>
     <div class="container">
@@ -18,6 +20,7 @@
         <div class="col-lg-12 text-left">
           <h2>About</h2>
           <p><a href="/">Home</a></p>
+	  {{ div | safe }}
         </div>
       </div>
     </div>
