--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
-B<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Toy application demoing useful tech.">
-    <meta name="author" content="@gotoariel">
+    <meta name="description" content="Online App Test">
+    <meta name="author" content="as">
     <!-- <link rel="icon" href="favicon.ico"> -->
 
     <title>Stock Data Lookup Demo</title>
@@ -32,35 +32,6 @@ B<!DOCTYPE html>
           <span class="navbar-brand">Ticker Lookup App</span>
         </div>
 
-        <div class="collapse navbar-collapse" id="nav-1">
-          <ul class="nav navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://github.com/thedataincubator/flask-framework">GitHub</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.thedataincubator.com/12day.html">12-day</a>
-            </li>
-            <!--
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            -->
-          </ul>
-          <!-- 
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-          -->
-        </div>
       </div>
     </nav>
 
@@ -68,7 +39,7 @@ B<!DOCTYPE html>
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-left">
-          <form id='input' method='post' action='about'>
+          <form id='input' method='post' action='index'>
           <p>Ticker symbol: <input type='text' name='ticker' placeholder='GOOG' /></p>
           <p>
           <input type="checkbox" name='features' value='close' />Closing price<br>
